Face Detection - Adding Sticker by using dynamic views